# gabrielebaldassarre.com

./: .Renviron.example  .Rprofile  .build_config.in  .dockerignore  .env.example  .gitattributes  .gitignore  .prettierignore  404.md  Dockerfile  Dockerfile.seo  Gemfile  LICENSE  Makefile  Makefile.common  Makefile.win  README.md  Rakefile  _config.yml  _seo-monitor.yml  app.yaml-dist  cloudbuild.yaml  cloudinary-test-urls.txt  configure  configure.ac  configure~  feed.xml  frontmatter-schema.yml  gabrielebaldassarre.code-workspace  gabrielebaldassarre.com.Rproj  index.html  llms.txt  metadata-schema.jsonld  requirements-seo.txt  robots.txt  seo-schema.sql  site.webmanifest
.github/: copilot-instructions.md  dependabot.yml
.github/lighthouse/: lighthouserc.json
.github/workflows/: broadcast-social.yml  cleanup-work-branches.yml  collect-incubator-pr.yml  (+3 more)
R/: build.R  build_one.R
_data/: glossary.yml  link_schema.yml  ui-text.yml
_dbt/: dbt_project.yml  profiles.yml
_drafts/: 2026-05-18-pipeline-cicd-jekyll-github-actions.md  2026-05-28-seo-automatico-parte-2-monitoraggio.md  2026-05-31-c64devbox-un-ambiente-di-sviluppo-moderno-per-il-commodore-64.md  2026-05-31-studybox-assistente-di-studio-ai-locale-sui-propri-documenti.md  2026-06-20-openscad-tutorial-parte-2.md  2026-06-20-openscad-tutorial-parte-3.Rmd  2026-06-20-openscad-tutorial-parte-3.md  quanto-piccolo-mondo-harry-potter.md  quanto-piccolo-mondo-harry-potter.md-disabled
_includes/: author-profile-custom-links.html  breadcrumbs.html  browser-upgrade.html  footer.html  head.html  icon.html  navigation.html  page_meta.html  pagination.html  post_status.html  seo.html  series_index.html  series_nav.html  skip-links.html
_layouts/: asset-3d.html  category.html  default.html  post-index.html  post.html
_pages/: 3d-printing.html  SNA.html  devops.html  fisica.html  home-assistant.html
_plugins/: cloudinary_transform.rb  cloudinary_url.rb  difficulty.rb  image_meta.rb  link_meta.rb  llms_full_generator.rb  openscad_rouge.rb  post_link.rb  readability.rb  repo_url.rb  series.rb  svg_dark_mode.rb  validate.rb
_scripts/: broadcast.py  semantic-analysis-prompt.md
tags/: index.html
(+71 files in other folders)
